Styling bug fixes UI changes to the mentions tables. Like extra paddings and make sure lines dont overlap.

--- a/caseworker/assets/styles/_mentions.scss
+++ b/caseworker/assets/styles/_mentions.scss
@@ -7,3 +7,12 @@
     margin-bottom: 8px;
   }
 }
+
+.mentions {
+  .govuk-table {
+    &__cell {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+  }
+}
